# ovutil

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bash
.github/workflows/: llvm-mingw.yml  ubuntu.yml  windows-llvm-mingw.yml  windows-msys2.yml
include/ovutil/: mo.h  parallel.h  str.h  win32.h
src/: CMakeLists.txt  str.c  str_atoi.c  str_atoi64.c  str_atou64.c  str_exclude_trailing_path_delimiter.c  str_extract_file_extension.c  str_extract_file_name.c  str_test.c  win32.c  win32_delete_file.c  win32_disable_family_windows.c  win32_encoding.c  win32_file_contains.c  win32_get_long_path_name.c  win32_get_temp_dir.c  win32_hinstance.c  win32_is_same_file.c  win32_message_box.c  win32_set_client_size.c  win32_test.c  win32_unique_file.c  win32_write_file.c
src/cmake/: extract-zip.cmake  makelib-llvm.cmake  makelib.cmake  version.cmake
src/mo/: mo.c  test.c  win32.c
src/mo/test_win32/: test.c
src/parallel/: get_number_of_logical_cores.c  get_number_of_physical_cores.c  ovparallel.c  test.c
src/str/: atoi64.c  atou64.c  exclude_trailing_path_delimiter.c  extract_file_extension.c  extract_file_name.c  include_trailing_path_delimiter.c  itoa64.c  sanitize.c  test.c  utoa64.c
src/win32/: create_unique_file.c  create_unique_temp_file.c  delete_file.c  disable_family_windows.c  encoding.c  file_contains.c  file_exists.c  get_file_attributes.c  get_long_path_name.c  get_module_file_name.c  get_temp_dir.c  get_window_text.c  hinstance.c  is_same_file.c  message_box.c  path_relative_path_to.c  set_client_size.c  test.c  write_file.c
